# Leadership_Coach

./: .gitignore  LICENSE  README.md
backend/: README.md  config.py  main.py  pyproject.toml  routers.py  run_check.py
backend/database/: core.py
backend/entities/: __init__.py  answers.py  development_plans.py  leadership_assessments.py  leadership_modules.py  questionnaires.py  questions.py  user_answers.py  user_module_progress.py  users.py
backend/features/answers/: controller.py  models.py  service.py
backend/features/auth/: controller.py  models.py  service.py
backend/features/development_plans/: controller.py  models.py  service.py
backend/features/leadership_assessments/: controller.py  models.py  service.py
backend/features/leadership_modules/: controller.py  models.py  service.py
backend/features/question_and_answers/: __init__.py  controller.py  models.py  service.py
backend/features/questionnaires/: controller.py  models.py  service.py
backend/features/questions/: controller.py  models.py  service.py
backend/features/results/: controller.py  models.py  service.py
backend/features/user_answers/: controller.py  models.py  service.py
backend/features/user_module_progress/: controller.py  models.py  service.py
backend/features/users/: controller.py  models.py  service.py
backend/helpers/: questionnaire_maker.py
backend/utils/: security.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: head.tsx  layout.tsx  page.tsx
frontend/src/components/: NavBar.tsx  PlanMarkdown.tsx
(+35 files in other folders)
